[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Character/Player.png" type="Texture" id=1]
[ext_resource path="res://Player3/Player3.gd" type="Script" id=2]
[ext_resource path="res://Controls/Joystick/Joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://Controls/RightGroupButton/RightGroupButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Effects/Skill/SuperDash/SuperDash.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player3/PickupZone.gd" type="Script" id=9]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Fonts/my-font-1/test.fnt" type="BitmapFont" id=11]
[ext_resource path="res://Materials/BlinkEffect/white_color.shader" type="Shader" id=12]
[ext_resource path="res://Effects/DashParticles/dash_particles.tscn" type="PackedScene" id=13]
[ext_resource path="res://Player3/ScreenShake.gd" type="Script" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 12 )
shader_param/active = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16, 19 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 11 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 7 ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 15 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 28, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=12]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=13]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 32, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 6.0
height = 8.0

[sub_resource type="Animation" id=16]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=17]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6, 8 )

[node name="Player3" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
dash_objecct = ExtResource( 13 )
super_dash = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
vframes = 9
hframes = 4
frame = 4
region_rect = Rect2( 96, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 7.0

[node name="ScreenShake" type="Node2D" parent="Camera2D"]
script = ExtResource( 14 )

[node name="ShakeTween" type="Tween" parent="Camera2D/ScreenShake"]

[node name="Frequency" type="Timer" parent="Camera2D/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera2D/ScreenShake"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_down"
anims/idle_down = SubResource( 3 )
anims/idle_left = SubResource( 4 )
anims/idle_right = SubResource( 5 )
anims/idle_up = SubResource( 6 )
anims/run_down = SubResource( 7 )
anims/run_left = SubResource( 8 )
anims/run_right = SubResource( 9 )
anims/run_up = SubResource( 10 )
anims/sword_attack_down = SubResource( 11 )
anims/sword_attack_left = SubResource( 12 )
anims/sword_attack_right = SubResource( 13 )
anims/sword_attack_up = SubResource( 14 )

[node name="Control" type="CanvasLayer" parent="."]

[node name="Joystick" type="Control" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="Control/Joystick" instance=ExtResource( 3 )]
position = Vector2( 64, -64 )

[node name="RightGroupButton" parent="Control" instance=ExtResource( 4 )]

[node name="SwordFacing" type="Position2D" parent="."]
position = Vector2( 0, -8 )
rotation = 3.14159

[node name="SwordHitbox" type="Area2D" parent="SwordFacing"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwordFacing/SwordHitbox"]
polygon = PoolVector2Array( -12, 2, 12, 2, 12, 16, 6, 20, -6, 20, -12, 16 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 10 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 15 )

[node name="HeadDebug" type="Node2D" parent="."]
visible = false

[node name="HP" type="Label" parent="HeadDebug"]
margin_left = -96.0
margin_top = -42.0
margin_right = 96.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 11 )
text = "Abc000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RStep" type="Position2D" parent="."]
position = Vector2( 4, 0 )

[node name="LStep" type="Position2D" parent="."]
position = Vector2( -4, 0 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "stop"
anims/start = SubResource( 16 )
anims/stop = SubResource( 17 )

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
position = Vector2( 0, -6 )
shape = SubResource( 18 )
[connection signal="timeout" from="Camera2D/ScreenShake/Frequency" to="Camera2D/ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/ScreenShake/Duration" to="Camera2D/ScreenShake" method="_on_Duration_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]

[editable path="Hurtbox"]
